--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
         <title>LOGIN APP</title>
     </head>
     <body>
@@ -12,8 +15,14 @@
             <img src="./assets/img/login-img.svg" alt="Homem caminhando">
             <h1>Welcome Back 😃</h1>
 
+            <div>
+                <label for="email">Email</label>
+                <input type="email" name="email" placeholder="Email">
 
+                <label for="password">Password</label>
+                <input type="password" name="password" placeholder="Password">
 
+            </div>
 
             
         </main>
