I created the div with the buttons and a link to the account creation page.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
 
             </div>
 
-            
+            <div>
+                <button>Log In</button>
+                <button> <img src="./assets/img/icon-google.svg" alt="logo do google"> Log In with Google</button>
+            </div>
+
+            <div>
+                <p><a href="">Newbie? <span>Create Account</span></a></p>
+            </div>
+
         </main>
         
     </body>
