--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> <!--Para usar icones-->
         <title>LOGIN APP</title>
     </head>
     <body>
@@ -25,8 +26,13 @@
             </div>
 
             <div>
-                <button>Log In</button>
-                <button> <img src="./assets/img/icon-google.svg" alt="logo do google"> Log In with Google</button>
+                <button>Log In 
+                    <i class='bx bx-chevron-right'></i> <!--Icone arrow-->
+                </button>
+                
+                <button> <img src="./assets/img/icon-google.svg" alt="logo do google"> <!--Imagem da logo do google--> 
+                    Log In with Google
+                </button>
             </div>
 
             <div>
