I started styling the body, main and h1. I created a div with the 'blur' class and styled it in the css creating a luminosity effect in the background of the image.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     </head>
     <body>
         <main>
+            <div class="blur"></div>
             <img src="./assets/img/login-img.svg" alt="Homem caminhando">
             <h1>Welcome Back 😃</h1>
 
             <div>
                 <label for="email">Email</label>
-                <input type="email" name="email" placeholder="Email">
+                <input type="email" name="email" placeholder="Email" autocomplete="email">
 
                 <label for="password">Password</label>
                 <input type="password" name="password" placeholder="Password">
