I styled the 'label' and 'input'. I gave a 'class' to the 'divs' of the 'labels' and styled it.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="./assets/img/login-img.svg" alt="Homem caminhando">
             <h1>Welcome Back 😃</h1>
 
-            <div>
+            <div class="container-inputs">
                 <label for="email">Email</label>
                 <input type="email" name="email" placeholder="Email" autocomplete="email">
 
