I created the 'classes' of the buttons and styled them and the 'placeholder' of the 'input'.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             </div>
 
             <div>
-                <button>Log In 
+                <button class="btn-login" >Log In 
                     <i class='bx bx-chevron-right'></i> <!--Icone arrow-->
                 </button>
                 
-                <button> <img src="./assets/img/icon-google.svg" alt="logo do google"> <!--Imagem da logo do google--> 
+                <button class="btn-google"> <img src="./assets/img/icon-google.svg" alt="logo do google"> <!--Imagem da logo do google--> 
                     Log In with Google
                 </button>
             </div>
